[gd_scene load_steps=12 format=3 uid="uid://dn23nhvdodm4p"]

[ext_resource type="Script" path="res://Scenes/Main/main_scoring.gd" id="1_j2mte"]
[ext_resource type="FontFile" uid="uid://iccaj5rujfxs" path="res://fonts/pixel_font.ttf" id="1_msw5i"]
[ext_resource type="Texture2D" uid="uid://d38gcr5aqhn3h" path="res://Resources/Particles/star.png" id="3_tvtwo"]
[ext_resource type="Texture2D" uid="uid://bdl3a853yqx87" path="res://Resources/Particles/buble.png" id="4_0r5ua"]

[sub_resource type="Curve" id="Curve_opnr7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.970852, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ax5bl"]
curve = SubResource("Curve_opnr7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fmr6j"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(400, 1, 0)
direction = Vector3(0, -1, 0)
spread = 60.0
initial_velocity_min = 190.48
initial_velocity_max = 369.05
angular_velocity_min = 60.0
angular_velocity_max = 120.0
radial_velocity_min = 80.0
radial_velocity_max = 100.0
gravity = Vector3(0, 50, 0)
scale_min = 3.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_ax5bl")
hue_variation_min = -1.0
hue_variation_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dd0r6"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(700, 400, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, -100, 0)
color = Color(0.669315, 0.669315, 0.669315, 1)
turbulence_enabled = true

[sub_resource type="Animation" id="Animation_3net2"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_1law5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8yfam"]
_data = {
"RESET": SubResource("Animation_1law5"),
"blink": SubResource("Animation_3net2")
}

[node name="MainScoring" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2mte")

[node name="MainScoring" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Shakeable" type="Control" parent="MainScoring"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(600, 315)

[node name="VBoxContainer" type="VBoxContainer" parent="MainScoring/Shakeable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NewRecordLabel" type="Label" parent="MainScoring/Shakeable/VBoxContainer"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_constants/line_spacing = -25
theme_override_fonts/font = ExtResource("1_msw5i")
theme_override_font_sizes/font_size = 90
text = "NUEVO RECORD"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MainScoring/Shakeable/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -25
theme_override_fonts/font = ExtResource("1_msw5i")
theme_override_font_sizes/font_size = 80
text = "Informaci√≥n
Recolectada"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MainScoring/Shakeable/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_msw5i")
theme_override_font_sizes/font_size = 90
text = "0000000
"
horizontal_alignment = 1

[node name="Fireworks" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.509804)
position = Vector2(590, 655)
amount = 60
process_material = SubResource("ParticleProcessMaterial_fmr6j")
texture = ExtResource("3_tvtwo")
lifetime = 4.0
preprocess = 4.0

[node name="Bubbles" type="GPUParticles2D" parent="."]
position = Vector2(589, 353)
amount = 150
process_material = SubResource("ParticleProcessMaterial_dd0r6")
texture = ExtResource("4_0r5ua")
lifetime = 4.0
preprocess = 5.0
visibility_rect = Rect2(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MainScoring/Shakeable/VBoxContainer")
libraries = {
"": SubResource("AnimationLibrary_8yfam")
}
